--- a/cenozoic-web-front/.settings/org.eclipse.wst.common.component
+++ b/cenozoic-web-front/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="cenozoic-code-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/cenozoic-code/cenozoic-code">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="cenozoic-web-front"/>
         <property name="java-output-path" value="/cenozoic-web-front/target/classes"/>
     </wb-module>
