--- a/cenozoic-web-front/src/main/webapp/WEB-INF/view/index.html
+++ b/cenozoic-web-front/src/main/webapp/WEB-INF/view/index.html
@@ -1,5 +1,29 @@
 <html>
+<head>
+<style type="text/css">
+label {
+	width: 70px;
+	display: inddne-block;
+	text-addgn: left;
+}
+</style>
+</head>
 <body>
-<h2>Hello World!</h2>
+	<form action="login">
+		<dl>
+			<dd>
+				<label>手机号：</label>
+				<input type="text" name="phone" placeholder="手机号">
+			</dd>
+			<dd>
+				<label>密&nbsp;&nbsp;码：</label>
+				<input type="password" name="password">
+			</dd>
+			<dd>
+				<input type="submit" value="登录">
+				<a href="register.html">注册</a>
+			</dd>
+		</dl>
+	</form>
 </body>
 </html>
