--- a/cenozoic-web-background/.settings/org.eclipse.wst.common.component
+++ b/cenozoic-web-background/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,11 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="cenozoic-web-background"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="cenozoic-code-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/cenozoic-code/cenozoic-code">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/cenozoic-web-background/target/classes"/>
+        <property name="context-root" value="cenozoic-web-bg"/>
     </wb-module>
 </project-modules>
