--- a/cenozoic-web-background/src/main/webapp/WEB-INF/view/index.html
+++ b/cenozoic-web-background/src/main/webapp/WEB-INF/view/index.html
@@ -1,15 +1,10 @@
 <html>
 <head>
-<script type="text/javascript" src="resource/plugin/extjs/5.10/bootstrap.js"></script>
-<script type="text/javascript" src="resource/plugin/extjs/5.10/ext-all.js"></script>
-<script type="text/javascript" src="resource/code/app.js"></script>
-<link rel="stylesheet" type="text/css" href="resource/plugin/extjs/5.10/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css" />
+<script type="text/javascript" src="${requestContext.contextPath}/resource/plugin/extjs/${extjsVersion}/bootstrap.js"></script>
+<script type="text/javascript" src="${requestContext.contextPath}/resource/plugin/extjs/${extjsVersion}/ext-all.js"></script>
+<script type="text/javascript" src="${requestContext.contextPath}/resource/code/app.js"></script>
+<link rel="stylesheet" type="text/css" href="${requestContext.contextPath}/resource/plugin/extjs/5.10/${extjsTheme}" />
 </head>
 <body>
-	<script type="text/javascript">
-		Ext.onReady(function() {
-			Ext.MessageBox.alert("提示", "Hello World");
-		});
-	</script>
 </body>
 </html>
